--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
 	<header>
-		<h1>Task List</h1>
+		<h1>Get Things Done</h1>
 
 		<form id="new-task-form">
 			<input type="text" name="new-task-input" id="new-task-input" placeholder="Add a task to get things done" />
